# factorial-py

./: .gitignore  build.py  pyproject.toml
src/: factorial.c  factorial.h
tests/: conftest.py  test_benchmark.py  test_factorial.py
