[tool.poetry]
name = "factorial"
version = "0.1.0"
description = ""
authors = ["Rob Hardwick <rob.hardwick@circuitmind.io>"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
